# Django-Blog

./: .gitignore  pyproject.toml
blog/: db.sqlite3
blog/blog/: settings.py  urls.py
blog/posts/: models.py  urls.py  views.py
blog/posts/migrations/: 0001_initial.py
blog/static/assets/css/: style.css
blog/templates/: index.html  post.html  weather.html
blog/weather/: urls.py  views.py
